[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openenv-email-ops"
version = "1.0.0"
description = "Enterprise inbox simulation RL environment for AI agent training"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0.1",
    "openai>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "openenv-email-ops"
version = "1.0.0"
tasks = ["easy", "medium", "hard"]
